--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ yarn-error.log
 # Yarn Integrity file
 .yarn-integrity
 
+#Other
 .htaccess
 error_log
 
@@ -81,3 +82,5 @@ Roboto_Slab
 .vscode/sftp.json
 artifacts_private/environment_variables.php
 artifacts_private/vendor
+api/private/vendor
+api/vendor
