change artifacts_private folder to private

--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ error_log
 
 Roboto_Slab
 .vscode/sftp.json
-artifacts_private/environment_variables.php
-artifacts_private/vendor
+private/environment_variables.php
+private/vendor
 api/private/vendor
 api/vendor
